+ Makefile uninstall target
* check buffer size